docs: add changelog

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint:commit": "commitlint",
     "eslint": "eslint . --ext .ts --ext .tsx --ext .js --quiet",
     "pages": "cross-env NODE_ENV=pages node ./pages/build.js",
-    "prettier": "prettier './**/*.{html,css,js,mjs,ts,mts,tsx,json,yml,yaml}'",
+    "prettier": "prettier './**/*.{html,css,md,js,mjs,ts,mts,tsx,json,yml,yaml}'",
     "screenshots": "npm run build && cross-env NODE_ENV=screnshots PGHOST=localhost PGDATABASE=myfolio PGUSER=myfolio PGPASSWORD=myfolio USER_EMAIL=test@test.com USER_PASSWORD=testtest ts-node test/screenshots.ts",
     "testdata": "cross-env PGHOST=localhost PGDATABASE=myfolio PGUSER=myfolio PGPASSWORD=myfolio USER_EMAIL=test@test.com USER_PASSWORD=testtest ts-node test/testdata.ts",
     "start": "node build.js && cross-env PGHOST=localhost PGDATABASE=myfolio PGUSER=myfolio PGPASSWORD=myfolio USER_EMAIL=test@test.com USER_PASSWORD=testtest node --enable-source-maps dist/index.js",
@@ -66,6 +66,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-v8": "^1.2.1",
     "autoprefixer": "^10.4.17",
+    "conventional-changelog": "^5.1.0",
     "cross-env": "^7.0.3",
     "esbuild": "^0.19.11",
     "eslint": "^8.56.0",
