refactor: drop attachment content table and use derivation table instead
BREAKING CHANGE: renamed some API endpoints

--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "pages": "cross-env NODE_ENV=pages node ./pages/build.js",
     "prettier": "prettier './**/*.{html,css,md,js,mjs,ts,mts,tsx,json,yml,yaml}'",
     "screenshots": "npm run build && cross-env NODE_ENV=screnshots PGHOST=localhost PGDATABASE=myfolio PGUSER=myfolio PGPASSWORD=myfolio USER_EMAIL=test@test.com USER_PASSWORD=testtest ts-node test/screenshots.ts",
+    "regenerate-attachment-derivations": "cross-env PGHOST=localhost PGDATABASE=myfolio PGUSER=myfolio PGPASSWORD=myfolio USER_EMAIL=test@test.com USER_PASSWORD=testtest ts-node src/server/index.ts regenerate-attachment-derivations",
     "testdata": "cross-env PGHOST=localhost PGDATABASE=myfolio PGUSER=myfolio PGPASSWORD=myfolio USER_EMAIL=test@test.com USER_PASSWORD=testtest ts-node test/testdata.ts",
-    "start": "node build.js && cross-env PGHOST=localhost PGDATABASE=myfolio PGUSER=myfolio PGPASSWORD=myfolio USER_EMAIL=test@test.com USER_PASSWORD=testtest node --enable-source-maps dist/index.js",
+    "start": "node build.js && cross-env PGHOST=localhost PGDATABASE=myfolio PGUSER=myfolio PGPASSWORD=myfolio USER_EMAIL=test@test.com USER_PASSWORD=testtest node --enable-source-maps dist/index.js server",
     "start:docker": "docker compose up --build",
     "start:watch": "nodemon --watch ./src --ext html,css,ts,tsx start",
     "test": "vitest",
@@ -37,6 +38,7 @@
     "bignumber.js": "^9.1.2",
     "body-parser": "^1.20.2",
     "clsx": "^2.1.0",
+    "commander": "^12.0.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "csv-parse": "^5.5.3",
