refactor: add user creation cli command

--- a/package.json
+++ b/package.json
@@ -9,12 +9,9 @@
     "eslint": "eslint . --ext .ts --ext .tsx --ext .js --quiet",
     "pages": "cross-env NODE_ENV=pages node ./pages/build.js",
     "prettier": "prettier './**/*.{html,css,md,js,mjs,ts,mts,tsx,json,yml,yaml}'",
-    "screenshots": "npm run build && cross-env NODE_ENV=screnshots PGHOST=localhost PGDATABASE=myfolio PGUSER=myfolio PGPASSWORD=myfolio USER_EMAIL=test@test.com USER_PASSWORD=testtest ts-node test/screenshots.ts",
-    "regenerate-attachment-derivations": "cross-env PGHOST=localhost PGDATABASE=myfolio PGUSER=myfolio PGPASSWORD=myfolio USER_EMAIL=test@test.com USER_PASSWORD=testtest ts-node src/server/index.ts regenerate-attachment-derivations",
-    "testdata": "cross-env PGHOST=localhost PGDATABASE=myfolio PGUSER=myfolio PGPASSWORD=myfolio USER_EMAIL=test@test.com USER_PASSWORD=testtest ts-node test/testdata.ts",
-    "start": "node build.js && cross-env PGHOST=localhost PGDATABASE=myfolio PGUSER=myfolio PGPASSWORD=myfolio USER_EMAIL=test@test.com USER_PASSWORD=testtest node --enable-source-maps dist/index.js server",
-    "start:docker": "docker compose up --build",
-    "start:watch": "nodemon --watch ./src --ext html,css,ts,tsx start",
+    "screenshots": "npm run build && cross-env NODE_ENV=screnshots PGHOST=localhost PGDATABASE=myfolio PGUSER=myfolio PGPASSWORD=myfolio ts-node test/screenshots.ts",
+    "start": "node build.js && cross-env PGHOST=localhost PGDATABASE=myfolio PGUSER=myfolio PGPASSWORD=myfolio node --enable-source-maps dist/index.js",
+    "start:dev": "nodemon --watch ./src --ext html,css,ts,tsx server",
     "test": "vitest",
     "test:bench": "vitest bench",
     "verify": "npm run lint:commit -- --from HEAD~1 --to HEAD && npm run lint:fix && npm run lint && npm test -- --run"
