--- a/package.json
+++ b/package.json
@@ -17,69 +17,69 @@
     "verify": "npm run lint:commit -- --from HEAD~1 --to HEAD && npm run lint:fix && npm run lint && npm test -- --run"
   },
   "dependencies": {
-    "@choffmeister/rpc-browser": "^0.1.2",
-    "@choffmeister/rpc-core": "^0.1.2",
-    "@choffmeister/rpc-express": "^0.1.2",
-    "@choffmeister/rpc-openapi": "^0.1.2",
-    "@headlessui/react": "^1.7.18",
-    "@tanstack/react-query": "^4.36.1",
-    "@types/body-parser": "^1.19.5",
-    "@types/compression": "^1.7.5",
-    "@types/cookie-parser": "^1.4.6",
-    "@types/d3-color": "^3.1.3",
-    "@types/d3-scale": "^4.0.8",
-    "@types/express": "^4.17.21",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
-    "axios": "^1.6.5",
-    "bignumber.js": "^9.1.2",
-    "body-parser": "^1.20.2",
-    "clsx": "^2.1.0",
-    "commander": "^12.0.0",
-    "compression": "^1.7.4",
-    "cookie-parser": "^1.4.6",
-    "csv-parse": "^5.5.3",
-    "d3-color": "^3.1.0",
-    "d3-scale": "^4.0.2",
-    "express": "^4.18.2",
-    "fast-xml-parser": "^4.3.3",
-    "id128": "^1.6.6",
-    "jsep": "^1.3.8",
-    "normalize.css": "^8.0.1",
-    "postgres": "^3.4.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
-    "react-router-dom": "^6.21.3",
-    "winston": "^3.11.0"
+    "@choffmeister/rpc-browser": "0.1.2",
+    "@choffmeister/rpc-core": "0.1.2",
+    "@choffmeister/rpc-express": "0.1.2",
+    "@choffmeister/rpc-openapi": "0.1.2",
+    "@headlessui/react": "2.0.4",
+    "@tanstack/react-query": "4.36.1",
+    "@types/body-parser": "1.19.5",
+    "@types/compression": "1.7.5",
+    "@types/cookie-parser": "1.4.7",
+    "@types/d3-color": "3.1.3",
+    "@types/d3-scale": "4.0.8",
+    "@types/express": "4.17.21",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "axios": "1.7.2",
+    "bignumber.js": "9.1.2",
+    "body-parser": "1.20.2",
+    "clsx": "2.1.1",
+    "commander": "12.1.0",
+    "compression": "1.7.4",
+    "cookie-parser": "1.4.6",
+    "csv-parse": "5.5.6",
+    "d3-color": "3.1.0",
+    "d3-scale": "4.0.2",
+    "express": "4.19.2",
+    "fast-xml-parser": "4.4.0",
+    "id128": "1.6.6",
+    "jsep": "1.3.8",
+    "normalize.css": "8.0.1",
+    "postgres": "3.4.4",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-icons": "5.2.1",
+    "react-router-dom": "6.23.1",
+    "winston": "3.13.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.6.0",
-    "@commitlint/config-conventional": "^18.6.0",
-    "@linaria/esbuild": "^5.0.4",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^14.1.2",
-    "@types/markdown-it": "^13.0.7",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "@typescript-eslint/parser": "^6.19.1",
-    "@vitejs/plugin-react": "^4.2.1",
-    "@vitest/coverage-v8": "^1.2.1",
-    "autoprefixer": "^10.4.17",
-    "conventional-changelog": "^5.1.0",
-    "cross-env": "^7.0.3",
-    "esbuild": "^0.19.11",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "jsdom": "^22.1.0",
-    "markdown-it": "^14.0.0",
-    "nodemon": "^3.0.3",
-    "prettier": "^3.2.4",
-    "puppeteer": "^21.9.0",
-    "sharp": "^0.33.2",
-    "testcontainers": "^10.6.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "vitest": "^1.2.1"
+    "@commitlint/cli": "19.3.0",
+    "@commitlint/config-conventional": "19.2.2",
+    "@linaria/esbuild": "5.0.4",
+    "@testing-library/jest-dom": "6.4.6",
+    "@testing-library/react": "16.0.0",
+    "@types/markdown-it": "14.1.1",
+    "@typescript-eslint/eslint-plugin": "7.13.0",
+    "@typescript-eslint/parser": "7.13.0",
+    "@vitejs/plugin-react": "4.3.1",
+    "@vitest/coverage-v8": "1.6.0",
+    "autoprefixer": "10.4.19",
+    "conventional-changelog": "6.0.0",
+    "cross-env": "7.0.3",
+    "esbuild": "0.21.5",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-simple-import-sort": "10.0.0",
+    "jsdom": "24.1.0",
+    "markdown-it": "14.1.0",
+    "nodemon": "3.1.3",
+    "prettier": "3.3.2",
+    "puppeteer": "22.11.0",
+    "sharp": "0.33.4",
+    "testcontainers": "10.9.0",
+    "ts-node": "10.9.2",
+    "typescript": "5.4.5",
+    "vitest": "1.6.0"
   }
 }
