--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "noUnusedParameters": true,
     "skipLibCheck": true,
     "strict": true,
-    "target": "es2017",
+    "target": "es2017"
   },
-  "include": ["./src"],
+  "include": ["./src"]
 }
