build: update dependencies

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "lint:fix": "npm run prettier -- --write --log-level warn; npm run eslint -- --fix --quiet",
     "lint": "tsc --noEmit && npm run prettier -- --check && npm run eslint",
     "lint:commit": "commitlint",
-    "eslint": "eslint . --ext .ts --ext .tsx --ext .js --quiet",
+    "eslint": "eslint . --quiet",
     "pages": "cross-env NODE_ENV=pages node ./pages/build.js",
     "prettier": "prettier './**/*.{html,css,md,js,mjs,ts,mts,tsx,json,yml,yaml}'",
     "screenshots": "npm run build && cross-env NODE_ENV=screnshots PGHOST=localhost PGDATABASE=myfolio PGUSER=myfolio PGPASSWORD=myfolio ts-node test/screenshots.ts",
@@ -21,65 +21,67 @@
     "@choffmeister/rpc-core": "0.1.2",
     "@choffmeister/rpc-express": "0.1.2",
     "@choffmeister/rpc-openapi": "0.1.2",
-    "@headlessui/react": "2.1.1",
+    "@headlessui/react": "2.2.0",
     "@tanstack/react-query": "4.36.1",
     "@types/body-parser": "1.19.5",
     "@types/compression": "1.7.5",
-    "@types/cookie-parser": "1.4.7",
+    "@types/cookie-parser": "1.4.8",
     "@types/d3-color": "3.1.3",
     "@types/d3-scale": "4.0.8",
-    "@types/express": "4.17.21",
+    "@types/express": "5.0.0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "axios": "1.7.2",
+    "axios": "1.7.9",
     "bignumber.js": "9.1.2",
-    "body-parser": "1.20.2",
+    "body-parser": "1.20.3",
     "clsx": "2.1.1",
-    "commander": "12.1.0",
-    "compression": "1.7.4",
-    "cookie-parser": "1.4.6",
-    "csv-parse": "5.5.6",
+    "commander": "13.0.0",
+    "compression": "1.7.5",
+    "cookie-parser": "1.4.7",
+    "csv-parse": "5.6.0",
     "d3-color": "3.1.0",
     "d3-scale": "4.0.2",
-    "express": "4.19.2",
-    "fast-xml-parser": "4.4.0",
+    "express": "4.21.2",
+    "fast-xml-parser": "4.5.1",
     "id128": "1.6.6",
-    "jsep": "1.3.8",
+    "jsep": "1.4.0",
     "normalize.css": "8.0.1",
-    "postgres": "3.4.4",
+    "postgres": "3.4.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-icons": "5.2.1",
-    "react-router-dom": "6.24.1",
-    "winston": "3.13.0"
+    "react-icons": "5.4.0",
+    "react-router-dom": "7.1.1",
+    "winston": "3.17.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "19.3.0",
-    "@commitlint/config-conventional": "19.2.2",
+    "@commitlint/cli": "19.6.1",
+    "@commitlint/config-conventional": "19.6.0",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.18.0",
     "@linaria/esbuild": "5.0.4",
-    "@testing-library/jest-dom": "6.4.6",
-    "@testing-library/react": "16.0.0",
-    "@types/markdown-it": "14.1.1",
-    "@typescript-eslint/eslint-plugin": "7.15.0",
-    "@typescript-eslint/parser": "7.15.0",
-    "@vitejs/plugin-react": "4.3.1",
-    "@vitest/coverage-v8": "1.6.0",
-    "autoprefixer": "10.4.19",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.1.0",
+    "@types/markdown-it": "14.1.2",
+    "@typescript-eslint/eslint-plugin": "8.19.1",
+    "@typescript-eslint/parser": "8.19.1",
+    "@vitejs/plugin-react": "4.3.4",
+    "@vitest/coverage-v8": "2.1.8",
+    "autoprefixer": "10.4.20",
     "conventional-changelog": "6.0.0",
     "cross-env": "7.0.3",
-    "esbuild": "0.23.0",
-    "eslint": "8.57.0",
+    "esbuild": "0.24.2",
+    "eslint": "9.18.0",
     "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-simple-import-sort": "10.0.0",
-    "jsdom": "24.1.0",
+    "eslint-plugin-simple-import-sort": "12.1.1",
+    "jsdom": "26.0.0",
     "markdown-it": "14.1.0",
-    "nodemon": "3.1.4",
-    "prettier": "3.3.2",
-    "puppeteer": "22.12.1",
-    "sharp": "0.33.4",
-    "testcontainers": "10.10.1",
+    "nodemon": "3.1.9",
+    "prettier": "3.4.2",
+    "puppeteer": "24.0.0",
+    "sharp": "0.33.5",
+    "testcontainers": "10.16.0",
     "ts-node": "10.9.2",
-    "typescript": "5.5.3",
-    "vitest": "1.6.0"
+    "typescript": "5.7.3",
+    "vitest": "2.1.8"
   }
 }
