--- a/package.json
+++ b/package.json
@@ -21,22 +21,22 @@
     "@choffmeister/rpc-core": "0.1.2",
     "@choffmeister/rpc-express": "0.1.2",
     "@choffmeister/rpc-openapi": "0.1.2",
-    "@headlessui/react": "2.2.0",
+    "@headlessui/react": "2.2.1",
     "@tanstack/react-query": "4.36.1",
     "@types/body-parser": "1.19.5",
     "@types/compression": "1.7.5",
     "@types/cookie-parser": "1.4.8",
     "@types/d3-color": "3.1.3",
-    "@types/d3-scale": "4.0.8",
-    "@types/express": "5.0.0",
+    "@types/d3-scale": "4.0.9",
+    "@types/express": "5.0.1",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "axios": "1.7.9",
-    "bignumber.js": "9.1.2",
+    "axios": "1.8.4",
+    "bignumber.js": "9.2.1",
     "body-parser": "1.20.3",
     "clsx": "2.1.1",
-    "commander": "13.0.0",
-    "compression": "1.7.5",
+    "commander": "13.1.0",
+    "compression": "1.8.0",
     "cookie-parser": "1.4.7",
     "csv-parse": "5.6.0",
     "d3-color": "3.1.0",
@@ -49,39 +49,39 @@
     "postgres": "3.4.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-icons": "5.4.0",
-    "react-router-dom": "7.1.1",
+    "react-icons": "5.5.0",
+    "react-router-dom": "7.5.0",
     "winston": "3.17.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "19.6.1",
-    "@commitlint/config-conventional": "19.6.0",
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.18.0",
+    "@commitlint/cli": "19.8.0",
+    "@commitlint/config-conventional": "19.8.0",
+    "@eslint/eslintrc": "3.3.1",
+    "@eslint/js": "9.24.0",
     "@linaria/esbuild": "5.0.4",
     "@testing-library/jest-dom": "6.6.3",
-    "@testing-library/react": "16.1.0",
+    "@testing-library/react": "16.3.0",
     "@types/markdown-it": "14.1.2",
-    "@typescript-eslint/eslint-plugin": "8.19.1",
-    "@typescript-eslint/parser": "8.19.1",
+    "@typescript-eslint/eslint-plugin": "8.29.1",
+    "@typescript-eslint/parser": "8.29.1",
     "@vitejs/plugin-react": "4.3.4",
     "@vitest/coverage-v8": "2.1.8",
-    "autoprefixer": "10.4.20",
+    "autoprefixer": "10.4.21",
     "conventional-changelog": "6.0.0",
     "cross-env": "7.0.3",
     "esbuild": "0.24.2",
-    "eslint": "9.18.0",
+    "eslint": "9.24.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "jsdom": "26.0.0",
     "markdown-it": "14.1.0",
     "nodemon": "3.1.9",
-    "prettier": "3.4.2",
-    "puppeteer": "24.0.0",
+    "prettier": "3.5.3",
+    "puppeteer": "24.6.1",
     "sharp": "0.33.5",
-    "testcontainers": "10.16.0",
+    "testcontainers": "10.24.2",
     "ts-node": "10.9.2",
-    "typescript": "5.7.3",
+    "typescript": "5.8.3",
     "vitest": "2.1.8"
   }
 }
