--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "@commitlint/config-conventional": "20.0.0",
     "@eslint/eslintrc": "3.3.1",
     "@eslint/js": "9.37.0",
-    "@linaria/esbuild": "5.0.4",
+    "@linaria/esbuild": "^4.5.4",
     "@testing-library/jest-dom": "6.9.1",
     "@testing-library/react": "16.3.0",
     "@types/markdown-it": "14.1.2",
