build: rename to ownfolio

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -9,6 +9,9 @@ jobs:
   publish:
     runs-on: ubuntu-22.04
     name: Publish
+    permissions:
+      contents: read
+      packages: write
     steps:
       - uses: actions/checkout@v4
         with:
@@ -30,5 +33,5 @@ jobs:
       - name: Build and publish docker image
         run: docker buildx build --platform=linux/amd64 -t $DOCKER_IMAGE:$DOCKER_TAG -t $DOCKER_IMAGE:latest --pull --push .
         env:
-          DOCKER_IMAGE: ghcr.io/choffmeister/myfolio
+          DOCKER_IMAGE: ghcr.io/ownfolio/ownfolio
           DOCKER_TAG: ${{ steps.git-describe-semver.outputs.version }}
