--- a/package.json
+++ b/package.json
@@ -22,27 +22,27 @@
     "@choffmeister/rpc-express": "0.1.2",
     "@choffmeister/rpc-openapi": "0.1.2",
     "@headlessui/react": "2.2.9",
-    "@tanstack/react-query": "5.90.5",
+    "@tanstack/react-query": "5.90.9",
     "@types/body-parser": "1.19.6",
     "@types/compression": "1.8.1",
     "@types/cookie-parser": "1.4.10",
     "@types/d3-color": "3.1.3",
     "@types/d3-scale": "4.0.9",
-    "@types/express": "5.0.4",
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2",
-    "axios": "1.12.2",
+    "@types/express": "5.0.5",
+    "@types/react": "19.2.5",
+    "@types/react-dom": "19.2.3",
+    "axios": "1.13.2",
     "bignumber.js": "9.3.1",
     "body-parser": "2.2.0",
     "clsx": "2.1.1",
-    "commander": "14.0.1",
+    "commander": "14.0.2",
     "compression": "1.8.1",
     "cookie-parser": "1.4.7",
     "csv-parse": "6.1.0",
     "d3-color": "3.1.0",
     "d3-scale": "4.0.2",
     "express": "5.1.0",
-    "fast-xml-parser": "5.3.0",
+    "fast-xml-parser": "5.3.2",
     "id128": "1.6.6",
     "jsep": "1.4.0",
     "normalize.css": "8.0.1",
@@ -50,38 +50,38 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "5.5.0",
-    "react-router-dom": "7.9.4",
+    "react-router-dom": "7.9.6",
     "winston": "3.18.3"
   },
   "devDependencies": {
     "@commitlint/cli": "20.1.0",
     "@commitlint/config-conventional": "20.0.0",
     "@eslint/eslintrc": "3.3.1",
-    "@eslint/js": "9.38.0",
-    "@linaria/esbuild": "^5.0.4",
+    "@eslint/js": "9.39.1",
+    "@linaria/esbuild": "5.0.4",
     "@testing-library/jest-dom": "6.9.1",
     "@testing-library/react": "16.3.0",
     "@types/markdown-it": "14.1.2",
-    "@typescript-eslint/eslint-plugin": "8.46.2",
-    "@typescript-eslint/parser": "8.46.2",
-    "@vitejs/plugin-react": "5.1.0",
-    "@vitest/coverage-v8": "4.0.3",
-    "autoprefixer": "10.4.21",
+    "@typescript-eslint/eslint-plugin": "8.46.4",
+    "@typescript-eslint/parser": "8.46.4",
+    "@vitejs/plugin-react": "5.1.1",
+    "@vitest/coverage-v8": "4.0.9",
+    "autoprefixer": "10.4.22",
     "conventional-changelog": "7.1.1",
     "cross-env": "10.1.0",
-    "esbuild": "0.25.11",
-    "eslint": "9.38.0",
+    "esbuild": "0.27.0",
+    "eslint": "9.39.1",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-simple-import-sort": "12.1.1",
-    "jsdom": "27.0.1",
+    "jsdom": "27.2.0",
     "markdown-it": "14.1.0",
-    "nodemon": "3.1.10",
+    "nodemon": "3.1.11",
     "prettier": "3.6.2",
-    "puppeteer": "24.26.1",
-    "sharp": "0.34.4",
-    "testcontainers": "11.7.2",
+    "puppeteer": "24.30.0",
+    "sharp": "0.34.5",
+    "testcontainers": "11.8.1",
     "ts-node": "10.9.2",
     "typescript": "5.9.3",
-    "vitest": "4.0.3"
+    "vitest": "4.0.9"
   }
 }
