--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -25,11 +25,15 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v4
+      - uses: actions/setup-node@v6
         with:
           node-version: 20
+          registry-url: 'https://npm.pkg.github.com'
+          scope: '@ownfolio'
       - name: Install dependencies
         run: npm ci
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Render screenshots
         run: npm run screenshots
       - name: Build pages
