--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -16,9 +16,11 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v4
+      - uses: actions/setup-node@v6
         with:
           node-version: 20
+          registry-url: 'https://npm.pkg.github.com'
+          scope: '@ownfolio'
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -31,7 +33,8 @@ jobs:
           drop-prefix: true
           prerelease-timestamped: true
       - name: Build and publish docker image
-        run: docker buildx build --platform=linux/amd64 -t $DOCKER_IMAGE:$DOCKER_TAG -t $DOCKER_IMAGE:latest --pull --push .
+        run: docker buildx build --platform=linux/amd64 --secret id=node-auth-token,env=NODE_AUTH_TOKEN -t $DOCKER_IMAGE:$DOCKER_TAG -t $DOCKER_IMAGE:latest --pull --push .
         env:
           DOCKER_IMAGE: ghcr.io/ownfolio/ownfolio
           DOCKER_TAG: ${{ steps.git-describe-semver.outputs.version }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
