--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,9 +19,11 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v4
+      - uses: actions/setup-node@v6
         with:
           node-version: 20
+          registry-url: 'https://npm.pkg.github.com'
+          scope: '@ownfolio'
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -36,6 +38,8 @@ jobs:
             ${{ runner.os }}-
       - name: Install dependencies
         run: npm ci
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Run commit message linting
         run: npm run lint:commit -- --from HEAD~1 --to HEAD
         if: github.event_name == 'push'
