--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "@commitlint/config-conventional": "20.0.0",
     "@eslint/eslintrc": "3.3.1",
     "@eslint/js": "9.39.1",
-    "@linaria/esbuild": "5.0.4",
+    "@linaria/core": "6.3.0",
+    "@linaria/react": "6.3.0",
     "@testing-library/jest-dom": "6.9.1",
     "@testing-library/react": "16.3.0",
     "@types/markdown-it": "14.1.2",
@@ -66,6 +67,7 @@
     "@typescript-eslint/parser": "8.46.4",
     "@vitejs/plugin-react": "5.1.1",
     "@vitest/coverage-v8": "4.0.9",
+    "@wyw-in-js/esbuild": "^0.8.0",
     "autoprefixer": "10.4.22",
     "conventional-changelog": "7.1.1",
     "cross-env": "10.1.0",
